--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,16 @@ TIMEOUT_URL=https://yourdomain.com/timeout
 RESULT_URL=https://yourdomain.com/result
 
 
+# clever cloud mysql
+# MYSQL_ADDON_HOST= bfwki5sa8z4sol5dspdr-mysql.services.clever-cloud.com
+# MYSQL_ADDON_DB= bfwki5sa8z4sol5dspdr
+# MYSQL_ADDON_USER= uylikp5vqrfm6l74
+# MYSQL_ADDON_PASSWORD= 71Wjwzfe5P5oe98wepm9
+# MYSQL_ADDON_PORT= 3306
+
+MYSQL_ADDON_HOST=bfwki5sa8z4sol5dspdr-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=bfwki5sa8z4sol5dspdr
+MYSQL_ADDON_USER=uylikp5vqrfm6l74
+MYSQL_ADDON_PORT=3306
+MYSQL_ADDON_PASSWORD=71Wjwzfe5P5oe98wepm9
+MYSQL_ADDON_URI=mysql://uylikp5vqrfm6l74:71Wjwzfe5P5oe98wepm9@bfwki5sa8z4sol5dspdr-mysql.services.clever-cloud.com:3306/bfwki5sa8z4sol5dspdr
